# sio-asyncapi

./: .asyncapi-tool  .asyncapi-tool   .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  pythonpackage.yml
.github/workflows/: publish.yml  python-package.yml
examples/: agentic_doc_asyncapi.yml  agentic_doc_example.py  agentic_doc_schema.json  app.py  chat_gpt_asyncapi.yaml  chat_gpt_example.py  downloader.py  downloader.yml  gen_doc.py  simple.py  simple.yml
src/sio_asyncapi/: __init__.py  _compat.py  _pydantic.py  application.py  asycnapi.py  asycnapi_spec.py
src/sio_asyncapi/asyncapi/: docs.py  utils.py
src/sio_asyncapi/asyncapi/models/: amqp1_bindings.py  amqp_bindings.py  anypoint_mq_bindings.py  async_api_base.py  channel.py  channel_bindings.py  components.py  contact.py  correlation_id.py  external_documentation.py  http_bindings.py  ibm_mq_bindings.py  info.py  jms_bindings.py  json_schema.py  kafka_bindings.py  license.py  mercure_bindings.py  message.py  message_bindings.py  message_example.py  message_trait.py  mqtt5_bindings.py  mqtt_bindings.py  nats_bindings.py  oauth_flows.py  operation.py  operation_bindings.py  operation_trait.py  parameter.py  redis_bindings.py  reference.py  schema.py  security_scheme.py  server.py  server_bindings.py  server_variable.py  sns_bindings.py  solace_bindings.py  sqs_bindings.py  (+3 more)
tests/: fixtures.py  test_docs.py  test_socketio.py  test_utils.py  test_validation.py
